--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@capacitor/android": "^2.4.6",
     "@capacitor/core": "2.4.6",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/local-notifications": "^5.31.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
@@ -30,8 +31,6 @@
     "@ionic/storage": "2.3.1",
     "@types/googlemaps": "^3.39.12",
     "ng2-validation": "^4.2.0",
-    "phonegap-plugin-multidex": "^1.0.0",
-    "phonegap-plugin-push": "^2.3.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
